@@ -10,3 +10,30 @@ ENV ZEPPELIN_CONF_DIR $ZEPPELIN_HOME/conf
 ENV ZEPPELIN_NOTEBOOK_DIR $ZEPPELIN_HOME/notebook
 ENV ZEPPELIN_COMMIT v0.7.3
 RUN echo '{ "allow_root": true }' > /root/.bowerrc
+RUN set -ex \
+ && buildDeps=' \
+    git \
+    bzip2 \
+    npm \
+ ' \
+ && apt-get update && apt-get install -y --no-install-recommends $buildDeps \
+ && curl -sL http://archive.apache.org/dist/maven/maven-3/3.5.0/binaries/apache-maven-3.5.0-bin.tar.gz \
+   | gunzip \
+   | tar x -C /tmp/ \
+ && git clone https://github.com/apache/zeppelin.git /usr/src/zeppelin \
+ && cd /usr/src/zeppelin \
+ && git checkout -q $ZEPPELIN_COMMIT \
+ && dev/change_scala_version.sh "2.11" \
+ && MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m" /tmp/apache-maven-3.5.0/bin/mvn --batch-mode package -DskipTests -Pscala-2.11 -Pbuild-distr \
+  -pl 'zeppelin-interpreter,zeppelin-zengine,zeppelin-display,spark-dependencies,spark,markdown,angular,shell,hbase,postgresql,jdbc,python,elasticsearch,zeppelin-web,zeppelin-server,zeppelin-distribution' \
+ && tar xvf /usr/src/zeppelin/zeppelin-distribution/target/zeppelin*.tar.gz -C /usr/ \
+ && mv /usr/zeppelin* $ZEPPELIN_HOME \
+ && mkdir -p $ZEPPELIN_HOME/logs \
+ && mkdir -p $ZEPPELIN_HOME/run \
+ && apt-get purge -y --auto-remove $buildDeps \
+ && rm -rf /var/lib/apt/lists/* \
+ && rm -rf /usr/src/zeppelin \
+ && rm -rf /root/.m2 \
+ && rm -rf /root/.npm \
+ && rm -rf /root/.cache/bower \
+ && rm -rf /tmp/*
